Bugzilla Bug 322422: fixed a negative integer division truncation direction error, which resulted in a negative PRTime with fractional seconds being converted to PRExplodedTime off by one second.  Thanks to Aleksey Sanin <aleksey@aleksey.com> for reporting and investigating the bug and reviewing the patch. r=aleskey.